# brain-cli

./: .gitignore  LICENSE  README.md  pyproject.toml
brain/: cli.py  config.py
brain/commands/: add.py  categorize.py  chat.py  daily.py  insights.py  learned.py  mail.py  process.py  search.py  test_system.py  todo.py  url.py  web.py  weekly.py
brain/core/: ai.py  db.py  files.py  git_sync.py  gmail.py  google_cal.py
brain/web/: app.py
brain/web/templates/: index.html
