[project]
name = "brain-cli"
version = "0.1.0"
description = "Personal AI-powered knowledge management CLI"
requires-python = ">=3.11"
dependencies = [
    "typer[all]>=0.12.0",
    "anthropic>=0.40.0",
    "sqlite-utils>=3.36",
    "gitpython>=3.1.40",
    "httpx>=0.27.0",
    "trafilatura>=1.12.0",
    "rich>=13.7.0",
    "tomli-w>=1.0.0",
    "python-dateutil>=2.9.0",
    "openai>=1.0.0",
    "google-api-python-client>=2.100.0",
    "google-auth-oauthlib>=1.1.0",
    "google-auth-httplib2>=0.2.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "python-multipart>=0.0.9",
    "openpyxl>=3.1.0",
]

[project.scripts]
brain = "brain.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["brain"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
